--- a/Basic JavaScript Projects/Project1_expressions_alert/index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expressions Alert</title>
+  <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-
+  <button onclick=showSentence()>Click Me</button>
+  <p id="par">It is JavaScript magic...</p>
   <script src="JS/main.js"></script>
 </body>
 </html>
