--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -17,6 +17,11 @@
   <!-- Operator Assignment -->
   <p id="concat" onclick=concat()>Click Here...</p>
 
+  <button class="joke-btn" onclick=showJoke()>Show a Joke</button>
+  <div id="joke">
+    <img src="./images/joke.jpg" alt="Joke">
+  </div>
+
   <script src="./JS/main.js"></script>
 </body>
 </html>
